@@ -81,6 +81,7 @@ speccyboot, boolean, 0
 specdrum, boolean, 0
 spectranet, boolean, 0
 spectranet_disable, boolean, 0
+usource, boolean, 0
 zxprinter, boolean, 1
 
 sound_device, string, NULL, 'd'
@@ -237,6 +238,7 @@ rom_plusd, string, "plusd.rom",
 rom_disciple, string, "disciple.rom",
 rom_opus, string, "opus.rom",
 rom_speccyboot, string, "speccyboot-1.4.rom",
+rom_usource, string, "usource.rom",
 
 drive_plus3a_type, string, NULL
 drive_plus3b_type, string, NULL
