@@ -4,6 +4,7 @@ SETUP_CHECK( debugger, debugger_mode != DEBUGGER_MODE_INACTIVE )
 SETUP_CHECK( beta, beta_available )
 SETUP_CHECK( plusd, plusd_available )
 SETUP_CHECK( disciple, disciple_available )
+SETUP_CHECK( usource, usource_available )
 SETUP_CHECK( if1p, if1_available )
 SETUP_CHECK( divide_early, settings_current.divide_enabled )
 SETUP_CHECK( spectranet_page, spectranet_available && !settings_current.spectranet_disable )
